overview: Hide windows before minimizing.

It seems for arc apps this is needed, otherwise the minimize animation
will still play. Its also what HomeLauncherGestureHandler does.

Test: manual
Bug: 904134
Change-Id: Idaed19ed11fe9b15ed2d9aa1e461017503bd6149
Reviewed-on: https://chromium-review.googlesource.com/c/1376711
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616416}
Former-commit-id: f4bf3776cac752df8bb8ccf832b45611088456b9