ash/wm/overview/window_selector_controller.cc
@@ -312,6 +312,7 @@ bool WindowSelectorController::ToggleOverview(
           continue;
 
         ScopedAnimationDisabler disable(window);
+        window->Hide();
         wm::GetWindowState(window)->Minimize();
       }
     }
